Move CompositeField to blocking. Add new features.