@@ -19,15 +19,15 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.reactive.server.EntityExchangeResult;
 import org.springframework.test.web.reactive.server.WebTestClient;
-import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
@@ -47,74 +47,78 @@ class FieldCompositeServiceApplicationTests {
 
         when(compositeIntegration.getAllFields()).
                 thenReturn(
-                        Flux.fromIterable(Arrays.asList(
+                        List.of(
                                 new Field(1, "oinky-1", "oinky_the_owner-1", 1.0, 1.0, LocalDate.now().minusDays(1), "oinky-ingenio-id-1", LocalDate.now().minusDays(1)),
                                 new Field(2, "oinky-2", "oinky_the_owner-2", 2.0, 2.0, LocalDate.now().minusDays(2), "oinky-ingenio-id-2", LocalDate.now().minusDays(2)),
                                 new Field(3, "oinky-3", "oinky_the_owner-3", 3.0, 3.0, LocalDate.now().minusDays(3), "oinky-ingenio-id-3", LocalDate.now().minusDays(3))
-                                )
                         )
                 );
         when(compositeIntegration.getFieldForId(1)).
                 thenReturn(
-                        Mono.just(
-                                new Field(1, "oinky-1", "oinky_the_owner-1", 1.0, 1.0, LocalDate.now().minusDays(1), "oinky-ingenio-id-1", LocalDate.now().minusDays(1))
-                        )
+                        new Field(1, "oinky-1", "oinky_the_owner-1", 1.0, 1.0, LocalDate.now().minusDays(1), "oinky-ingenio-id-1", LocalDate.now().minusDays(1))
                 );
 
-        when(compositeIntegration.getFieldForId(88)).
+        when(compositeIntegration.createField(any(Field.class))).
                 thenReturn(
-                        Mono.error(
-                                new DataNotFoundException("No Field found with id 88")
-                        )
+                        new Field(1, "oinky-1", "oinky_the_owner-1", 1.0, 1.0, LocalDate.now().minusDays(1), "oinky-ingenio-id-1", LocalDate.now().minusDays(1))
                 );
+
+
+        when(compositeIntegration.getFieldForId(88)).
+                thenThrow(new DataNotFoundException("No Field found with id 88"));
 
         when(compositeIntegration.getPayablesForFieldId(1)).
                 thenReturn(
-                        Flux.fromIterable(Arrays.asList(
+                        List.of(
                                 new Payable(1, LocalDate.now().minusDays(1), 1.0, 1.0, 1, 1, "Category-1", "SubCategory-1", "Comment-1", LocalDate.now()),
                                 new Payable(2, LocalDate.now().minusDays(2), 2.0, 2.0, 2, 1, "Category-2", "SubCategory-2", "Comment-2", LocalDate.now())
-                                )
                         )
                 );
         when(compositeIntegration.getPayablesForFieldId(2)).
                 thenReturn(
-                        Flux.empty()
+                        Collections.<Payable>emptyList()
                 );
         when(compositeIntegration.getPayablesForFieldId(3)).
                 thenReturn(
-                        Flux.fromIterable(List.of(
+                        List.of(
                                 new Payable(8, LocalDate.now().minusDays(8), 8.0, 8.0, 8, 3, "Category-8", "SubCategory-8", "Comment-8", LocalDate.now())
-                                )
                         )
                 );
         when(compositeIntegration.getPayablesForFieldId(88)).
                 thenReturn(
-                        Flux.empty()
+                        Collections.<Payable>emptyList()
                 );
 
         when(compositeIntegration.getReceivablesForFieldId(1)).
                 thenReturn(
-                        Flux.fromIterable(Arrays.asList(
+                        List.of(
                                 new Receivable(1, "2020/2021", LocalDate.now(), "document-1", 1, LocalDate.now()),
                                 new Receivable(2, "2020/2021", LocalDate.now(), "document-2", 1, LocalDate.now()),
                                 new Receivable(3, "2020/2021", LocalDate.now(), "document-3", 1, LocalDate.now())
-                                )
+                        )
+                );
+
+        when(compositeIntegration.createReceivables(any(List.class))).
+                thenReturn(
+                        List.of(
+                                new Receivable(1, "2020/2021", LocalDate.now(), "document-1", 1, LocalDate.now()),
+                                new Receivable(2, "2020/2021", LocalDate.now(), "document-2", 1, LocalDate.now()),
+                                new Receivable(3, "2020/2021", LocalDate.now(), "document-3", 1, LocalDate.now())
                         )
                 );
         when(compositeIntegration.getReceivablesForFieldId(2)).
                 thenReturn(
-                        Flux.empty()
+                        Collections.<Receivable>emptyList()
                 );
         when(compositeIntegration.getReceivablesForFieldId(3)).
                 thenReturn(
-                        Flux.fromIterable(List.of(
+                        List.of(
                                 new Receivable(3, "2020/2023", LocalDate.now(), "document-3", 3, LocalDate.now())
-                                )
                         )
                 );
         when(compositeIntegration.getReceivablesForFieldId(88)).
                 thenReturn(
-                        Flux.empty()
+                        Collections.<Receivable>emptyList()
                 );
     }
 
@@ -182,8 +186,8 @@ class FieldCompositeServiceApplicationTests {
 
         CompositeField body = new CompositeField(
                 new Field(1, "oinky-1", "oinky_the_owner-1", 1.0, 1.0, LocalDate.now().minusDays(1), "oinky-ingenio-id-1", LocalDate.now().minusDays(1)),
-                List.of( new Payable(1,LocalDate.now().minusDays(1), 1.0, 1.0, 1, 1, "Category-1", "SubCategory-1", "Comment-1", LocalDate.now())),
-                List.of( new Receivable(1, "2020/2021", LocalDate.now(), "document-1", 1, LocalDate.now()) )
+                List.of(new Payable(1, LocalDate.now().minusDays(1), 1.0, 1.0, 1, 1, "Category-1", "SubCategory-1", "Comment-1", LocalDate.now())),
+                List.of(new Receivable(1, "2020/2021", LocalDate.now(), "document-1", 1, LocalDate.now()))
         );
 
         client.post().uri("/field-composite")
@@ -211,5 +215,9 @@ class FieldCompositeServiceApplicationTests {
         CompositeField[] compositeFields = objectMapper.readValue(str, CompositeField[].class);
 
         assertEquals(compositeFields.length, 3);
+        assertEquals(compositeFields[1].getReceivables().size(), 0);
+        assertEquals(compositeFields[1].getPayables().size(), 0);
+        assertEquals(compositeFields[2].getReceivables().size(), 1);
+        assertEquals(compositeFields[2].getReceivables().size(), 1);
     }
 }
